--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
    
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <title>Mortgage Calculator</title>
+    <title>Mortgage Service</title>
   </head>
   <body>
        <div id="root"></div>
